package model.other;

public class Statistics {
}
