@startuml

title __OTHER's Class Diagram__\n

  package model.other {
    abstract class AI {
        {abstract} + move()
        {abstract} + attack()
    }
  }
  

  package model.other {
    class GameLoaderSaver {
        - gson : Gson
        + GameLoaderSaver()
        + saveSaveState()
        + getOption()
        + saveOptions()
        + getAllSaveStates()
        + getNameOfAllSaveStates()
        + deleteSaveState()
    }
  }
  

  package model.other {
    class SaveState {
        - party : Hero[]
        - playtime : long
        + SaveState()
        + getPlayer()
        + getPlaytime()
        + getOverworld()
        + getParty()
        + getDifficulty()
    }
  }
  

  package model.other {
    class Statistics {
    }
  }
  

  SaveState o-- Hero : player
  SaveState o-- Overworld : zaWORUDO
  SaveState o-- Difficulty : difficulty


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
